# rust-genai-demos

./: README.md
simplest-coder/: Cargo.toml
simplest-coder/src/: main.rs
